# openpmix

./: .clang-format  .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS  EXCEPTIONS  EXCEPTIONS.md  HACKING  INSTALL  LICENSE  Makefile.am  Makefile.openpmix-rules  Makefile.pmix-rules  NEWS  README  README.md  TODO  VERSION  autogen.pl  autogen.sh  configure.ac  mkdocs.yml  p  t
bindings/python/: AGENTS.md  MISSING_BINDINGS.md  Makefile.am  client.py  client.py.in  construct.py  cpmix.pxd  pmix.pxi  pmix.pyx  sched.py  sched.py.in  server.py  server.py.in  setup.py
config/: Makefile.am  c_get_alignment.m4  distscript.csh  oac_check_package.m4  pmix.m4  pmix_case_sensitive_fs_setup.m4  pmix_check_alps.m4  pmix_check_attributes.m4  pmix_check_broken_qsort.m4  pmix_check_cflags.m4  pmix_check_compiler_version.m4  pmix_check_cuda.m4  pmix_check_curl.m4  pmix_check_cython.py  pmix_check_icc.m4  pmix_check_jansson.m4  pmix_check_lock.m4  pmix_check_lustre.m4  pmix_check_munge.m4  pmix_check_offsetof.m4  pmix_check_ofi.m4  pmix_check_os_flavors.m4  pmix_check_package.m4  pmix_check_psm2.m4  pmix_check_pthread_pids.m4  pmix_check_sasl.m4  pmix_check_slurm.m4  pmix_check_tm.m4  pmix_check_vendor.m4  pmix_check_visibility.m4  pmix_check_withdir.m4  pmix_config_asm.m4  pmix_config_pthreads.m4  pmix_config_threads.m4  pmix_configure_options.m4  pmix_ensure_contains_optflags.m4  pmix_functions.m4  pmix_get_version.m4  pmix_get_version.m4sh  pmix_get_version.sh  (+16 more)
docs/: Makefile.am  conf.py  exceptions.rst  generate-code-of-conduct-rst.py  getting-help.rst  index.rst  install.rst  mca.rst  quickstart.rst  release-notes.rst  requirements.txt  security.rst  versions.rst
docs/building-apps/: index.rst  quickstart.rst
docs/developers/: autogen.rst  frameworks.rst  git-github.rst  gnu-autotools.rst  index.rst  prerequisites.rst  rst-for-markdown-expats.rst  source-code.rst  sphinx.rst
docs/how-things-work/: adding_datatypes.rst  distances.rst  index.rst  init-finalize.rst  pmix_log.rst  pstat.rst  ptl.rst  regex.rst  resolve.rst
docs/images/: 2XeonE5300.xml  amd-gpus.xml  summit.h17n08.lstopo-2.2.0.xml
docs/installing-pmix/: definitions.rst  filesystem-requirements.rst  installation-location.rst  packagers.rst  quickstart.rst  required-support-libraries.rst  vpath-builds.rst
docs/news/: index.rst  news-v1.x.rst  news-v4.x.rst  news-v5.x.rst  news-v6.x.rst
docs/release-notes/: compilers.rst
examples/: Makefile.am  Makefile.include  abi_no_init.c  abi_with_init.c  abort.c  alloc.c  asyncgroup.c  bad_exit.c  client.c  client2.c  client4.c  connect_die.c  debugger.c  debuggerd.c  dmodex.c  dynamic.c  examples.c  examples.h  fault.c  group.c  group_bootstrap.c  group_construct_abort.c  group_daemon_fail.c  group_destruct_die.c  group_die.c  group_dmodex.c  group_invite.c  group_invite_abort.c  group_invite_decline.c  group_invite_timeout.c  group_lcl_cid.c  group_leave.c  hello.c  jctrl.c  launcher.c  log.c  monitor.c  monitor_multi.c  monitor_remote.c  multi_nspace_group.c  (+15 more)
examples/perf/: compile.sh  pmi.h  pmi2.c  pmi2_utils.c  pmi_intra_perf.c  pmix.c  run.sh
include/: Makefile.am  pmi.h  pmi2.h  pmi2_api.h  pmix.h  pmix_common.h  pmix_common.h.in  pmix_deprecated.h  pmix_extend.h  pmix_rename.h.in  pmix_sched.h  pmix_server.h  pmix_tool.h  pmix_version.h.in
include/pmix/: pmix_common.h  pmix_common.h.in  rename.h
include/private/: types.h
src/: Makefile.am  cscope.out
src/api/: pmi.h  pmi2.h  pmi_api.h  pmix.h  pmix_common.h  pmix_common.h.in  pmix_server.h  pmixf.h
src/buffer_ops/: Makefile.am  buffer_ops.h  compare.c  copy.c  dump.c  internal.h  internal_functions.c  load_unload.c  lookup.c  open_close.c  pack.c  peek.c  print.c  register.c  types.h  unpack.c
src/class/: AGENTS.md  Makefile.am  pmix_bitmap.c  pmix_bitmap.h  pmix_hash_table.c  pmix_hash_table.h  pmix_hotel.c  pmix_hotel.h  pmix_list.c  pmix_list.h  pmix_object.c  pmix_object.h  pmix_pointer_array.c  pmix_pointer_array.h  pmix_ring_buffer.c  pmix_ring_buffer.h  pmix_value_array.c  pmix_value_array.h
src/client/: AGENTS.md  Makefile.am  Makefile.include  pmi1.c  pmi2.c  pmix_client.c  pmix_client.h  pmix_client_connect.c  pmix_client_convert.c  pmix_client_fabric.c  pmix_client_fence.c  pmix_client_get.c  pmix_client_group.c  pmix_client_hash.c  pmix_client_hash.h  pmix_client_ops.h  pmix_client_pub.c  pmix_client_resolve.c  pmix_client_spawn.c  pmix_client_topology.c  usock.c  usock.h  usock_sendrecv.c
src/common/: AGENTS.md  Makefile.am  Makefile.include  help-pfexec-base.txt  pfexec_linux.c  pmix_alloc.c  pmix_attributes.c  pmix_attributes.h  pmix_common.c  pmix_control.c  pmix_data.c  pmix_iof.c  pmix_iof.h  pmix_jobdata.c  pmix_log.c  pmix_monitor.c  pmix_monitor.h  pmix_pfexec.c  pmix_pfexec.h  pmix_query.c  pmix_security.c  pmix_session.c  pmix_strings.c
src/dstore/: Makefile.am  Makefile.include  pmix_dstore.c  pmix_dstore.h  pmix_esh.c  pmix_esh.h
src/event/: AGENTS.md  pmix_event.h  pmix_event_notification.c  pmix_event_registration.c
src/hwloc/: AGENTS.md  Makefile.include  help-ploc.txt  hwloc-internal.h  hwloc.c  pmix_hwloc.c  pmix_hwloc.h  pmix_hwloc_datatype.c
src/include/: AGENTS.md  Makefile.am  Makefile.include  align.h  atomic.h  constants.h  dictionary.h  hash_string.h  libpmixglobal.c  opal_portable_platform.h  pmix_atomic.h  pmix_config.h  pmix_config.h.in  pmix_config_bottom.h  pmix_config_top.h  pmix_event.h  pmix_globals.c  pmix_globals.h  pmix_hash_string.h  (+12 more)
test/: Makefile.am  cli_stages.c  cli_stages.h  client.c  cmd_examples  compile_cli.sh  compile_srv.sh  pmi2_client.c  pmi_client.c  pmix_client.c  pmix_client2.c  pmix_environ.c  pmix_regex.c  pmix_server_api2.c  pmix_srv_common.c  pmix_srv_common.h  pmix_srv_self.c  pmix_test.c  pmix_test_lite.c  run.sh  run_cli.sh  run_tests.pl  run_tests.pl.in  server.c  server_callbacks.c  server_callbacks.h  test_cd.c  test_cd.h  test_common.c  test_common.h  test_error.c  test_error.h  test_fence.c  test_fence.h  test_internal.c  test_internal.h  test_publish.c  test_publish.h  test_replace.c  test_replace.h  (+8 more)
(+1652 files in other folders)
